--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -1,7 +1,5 @@
 <p-progressBar [mode]="things.loading ? 'indeterminate' : 'determinate'" class="loading-bar" />
 
-<!-- TODO Add a Logout and User Settings/Profile button or option -->
-
 @if (useDial) {
   <div id="ddOverlay" [draggable]="true" (dragstart)="dialDragStart($event)" (dragend)="dialDragEnd($event)"
        class="menu-dial menu-dial-overlay"
@@ -11,7 +9,7 @@
         [style.top]="getDialBadgeTop()"
         [style.left]="getDialBadgeLeft()">{{things.getReminderBadgeCount()}}</div>
   }
-  <p-speedDial #speedDial id="speedDial" [model]="getDialItems()" direction="down" type="linear" class="menu-dial"
+  <p-speedDial #speedDial id="speedDial" [model]="getSpeedDialItems()" direction="down" type="linear" class="menu-dial"
                 (onHide)="isDialOpen = false" (onShow)="isDialOpen = true">
   </p-speedDial>
 }
@@ -19,9 +17,10 @@
   <div class="fixed-toolbar">
     <div class="toolbar-content">
       <div class="toolbar-left">
-        <p-button (onClick)="refreshThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" />
+        <p-button (onClick)="refreshThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" pTooltip="Refresh Things"/>
+        <p-button (onClick)="userProfileDialog.show();" icon="pi pi-user" severity="info" pTooltip="User Profile and Logout"/>
         @if (templateService.hasFavorite()) {
-          <p-button (onClick)="quickfillFavoriteThing()" icon="pi pi-heart" severity="help" /> <!-- TODO Have a "beginner mode", similar to intro paragraph on template dialog, that puts additional tooltips. Like for this Favorite have "Create a new Thing from your Favorite template" or whatever -->
+          <p-button (onClick)="quickfillFavoriteThing()" icon="pi pi-heart" severity="help" pTooltip="New from Favorite Template"/> <!-- TODO Have a "beginner mode", similar to intro paragraph on template dialog, that puts additional tooltips. Like for this Favorite have "Create a new Thing from your Favorite template" or whatever -->
         }
         <p-button (onClick)="clearSelectedRows(); manageTemplate.show()" icon="pi pi-list" [label]="getManageTemplateLabel()" />
         <p-button (onClick)="clearSelectedRows(); manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
@@ -72,7 +71,7 @@
          [globalFilterFields]="['name', 'time', 'templateType', 'reminder']"
          [paginator]="getUser().paginatorTable" [rows]="getUser().paginatorRows"
          [pageLinks]="3" [alwaysShowPaginator]="false" [showFirstLastIcon]="false" [showCurrentPageReport]="true"
-         [scrollable]="getUser().scrollableTable" [scrollHeight]="getUser().scrollableTable ? tableScrollHeight : '100%'"
+         [scrollable]="true" [scrollHeight]="tableScrollHeight"
          >
   <ng-template pTemplate="header">
     <tr>
@@ -196,6 +195,7 @@
                          (onEdit)="doneEditThing($event)"/>
 <riw-manage-template-dialog #manageTemplate />
 <riw-global-search-dialog #globalSearch [searchFunction]="globalFilterTable.bind(this)"/>
+<riw-user-profile-dialog #userProfile />
 
 <p-confirmPopup key="inline" />
 <p-confirmDialog key="dialog"/>
