--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,13 +5,15 @@
     <p-fieldset legend="Login">
       <div class="fieldset-inner">
         <div class="field-wrap">
-          <!-- TODO PRIORITY QUIDEL For mobile consider a "reset" button to clear each field. Or auto-select text when highlighting the field? -->
-          <input #usernameIn
-                 pInputText id="username" type="text" required="true"
-                 placeholder="Username"
-                 autocomplete="username" autocorrect="off" autocapitalize="off" autofocus="true"
-                 [(ngModel)]="username"
-                 (keyup.enter)="submitLogin()" />
+          <span class="p-input-icon-right full-length">
+            <input #usernameIn
+                  pInputText id="username" type="text" required="true"
+                  placeholder="Username"
+                  autocomplete="username" autocorrect="off" autocapitalize="off" autofocus="true"
+                  [(ngModel)]="userService.getAuth().username"
+                  (keyup.enter)="submitLogin()" />
+            <i class="pi pi-times pointer" (click)="resetField(usernameIn)">&nbsp;</i>
+          </span>
         </div>
         <div class="terminal-image-wrap" (click)="submitLogin()">
           @if (processing) {
@@ -22,13 +24,19 @@
           }
         </div>
         <div class="field-wrap">
-          <input #passwordIn
-                 pInputText id="password" type="password" required="true"
-                 placeholder="Password"
-                 autocomplete="current-password" autocorrect="off" autocapitalize="off"
-                 [(ngModel)]="password"
-                 (keyup.enter)="submitLogin()" />
+          <span class="p-input-icon-right full-length">
+            <input #passwordIn
+                  pInputText id="password" type="password" required="true"
+                  placeholder="Password"
+                  autocomplete="current-password" autocorrect="off" autocapitalize="off"
+                  [(ngModel)]="password"
+                  (keyup.enter)="submitLogin()" />
+            <i class="pi pi-times pointer" (click)="resetField(passwordIn)">&nbsp;</i>
+          </span>
         </div>
+      </div>
+      <div class="save-login-wrap">
+        <p-checkbox [(ngModel)]="saveLogin" [binary]="true" label="Save Login" />
       </div>
     </p-fieldset>
   </div>
