--- a/src/app/template-dropdown/template-dropdown.component.html
+++ b/src/app/template-dropdown/template-dropdown.component.html
@@ -1,22 +1,21 @@
 <!-- TODO Previously would bind directly to templateService.getFilteredData(hideDefaults), but due to a PrimeNG bug we have to go to a static value instead https://github.com/primefaces/primeng/issues/14319 -->
 <p-dropdown [options]="filteredData"
-            optionLabel="name"
             appendTo="body"
-            [(ngModel)]="selectedTemplate"
+            [(ngModel)]="selectedTemplateName"
             placeholder="Select a Template"
             (onChange)="selectedTemplateChanged()"
             class="consistent-field">
   <ng-template let-template pTemplate="item">
-    <span [style.color]="template.color">{{template.name}}</span>
+    <span [style.color]="templateService.getColorByTemplateName(template)">{{template}}</span>
   </ng-template>
 </p-dropdown>
 
 @if (!hideControls) {
   &nbsp;
   <p-button (onClick)="requestCreateTemplate()" icon="pi pi-calendar-plus" [rounded]="true" severity="success" pTooltip="Create a new Template" />
-  @if (selectedTemplate && !selectedTemplate.isDefault) {
+  @if (selectedTemplateName && !getSelectedTemplate()?.isDefault) {
     &nbsp;
-    @if (!!selectedTemplate) {
+    @if (!!getSelectedTemplate()) {
       <p-button (onClick)="requestDeleteTemplate()" icon="pi pi-calendar-times" [rounded]="true" severity="danger" pTooltip="Delete this Template" />
     }
   }
