--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -149,8 +149,9 @@
       <td class="center">
         <span [style]="'color:' + data.color">
           @if (data.hasFutureReminder() || things.isOverdueReminder(data)) {
-            <span class="pi pi-clock" pTooltip="Thing is a Reminder"></span> {{ data.time | date: 'MMM dd &rsquo;yy \'at\' hh:mm a' }}
+            <span class="pi pi-clock" pTooltip="Thing is a Reminder"></span>&nbsp;
           }
+          {{ data.time | date: 'MMM dd &rsquo;yy \'at\' hh:mm a' }}
         </span>
       </td>
       <td colspan="3">
