--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-@if (!userService.getAuth().processingCheckedStorage) {
+@if (!authService.getAuth().processingCheckedStorage) {
 <div class="login-wrap">
   <riw-typing-header text="Remember It Wholesale" [maxEffectCount]="10"></riw-typing-header>
   
@@ -11,7 +11,7 @@
                   pInputText id="username" type="text" required="true"
                   placeholder="Username"
                   autocomplete="username" autocorrect="off" autocapitalize="off" autofocus="true"
-                  [(ngModel)]="userService.getAuth().username"
+                  [(ngModel)]="authService.getAuth().username"
                   (keyup.enter)="submitLogin()" />
             <i class="pi pi-times pointer" (click)="resetField(usernameIn)">&nbsp;</i>
           </span>
