--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -41,5 +41,10 @@
       </div>
     </p-fieldset>
   </div>
+  
+  <div class="request-wrap">
+    <i class="pi pi-user-plus"></i>
+    Or you can manually <a href="" (click)="requestNewAccount($event)">request a new account</a><span class="hide-on-mobile"> and I'll get back to you!</span>
+  </div>
 </div>
 }
