--- a/src/app/reminder-message/reminder-message.component.html
+++ b/src/app/reminder-message/reminder-message.component.html
@@ -32,7 +32,7 @@
       @if (thing.hasFields()) {
         ,
       }
-      {{thing.getFieldsAsString()}}
+      {{thing.fieldsAsString}}
     </span>
   </div>
 </div>
