Added change password functionality

--- a/src/app/user-profile-dialog/user-profile-dialog.component.css
+++ b/src/app/user-profile-dialog/user-profile-dialog.component.css
@@ -8,6 +8,10 @@
   padding-top: 0;
 }
 
+.password-pad .inline {
+  margin-right: 10px;
+}
+
 .slider-wrap {
   display: inline-block;
   width: 50%;
