--- a/src/app/manage-thing-dialog/manage-thing-dialog.component.html
+++ b/src/app/manage-thing-dialog/manage-thing-dialog.component.html
@@ -42,7 +42,7 @@
                         pTooltip="Click to make this Thing a reminder that will display time left and notify you when due" />
           }
           @else {
-            <!-- TODO This is a hack to ensure the Add/Delete template circle buttons above don't wrap -->
+            <!-- Hack to ensure the Add/Delete template circle buttons above don't wrap -->
             <div style="width: 80px;">&nbsp;</div>
           }
         </td>
@@ -62,7 +62,7 @@
             <label [htmlFor]="field.property">{{ field.getLabel() }}</label>
           </td>
           <td colspan="2">
-            <!-- TODO Do we need any other field types for Things? Photos? Slider? -->
+            <!-- TODO Do we need any other field types for Things? Photos? Slider? Ongoing/Routine (aka infinite fields so you can keep adding to the same thing without flooding the table) -->
             @if (field.type === fieldTypes.Text || field.type === fieldTypes.Number) {
               <input [id]="field.property" pInputText [type]="field.type" [required]="field.required || false" [(ngModel)]="field.value"/>
             }
@@ -76,6 +76,15 @@
                   <label [for]="'option' + $index"> {{option}}</label>
                 }
               </div>
+            }
+            @else if (field.type === fieldTypes.Chooser) {
+              @if (field.value) {
+                <p-button (onClick)="field.handleRandomChooser(field)" [rounded]="true" icon="pi pi-bolt" pTooltip="Choose again" class="fleft"/>
+                <span class="chooser-result">{{field.value}}</span>
+              }
+              @else {
+                <p-button (onClick)="field.handleRandomChooser(field)" icon="pi pi-bolt" [label]="'Randomly choose from ' + field.options?.length + ' options'"/>
+              }
             }
             @else if (field.type === fieldTypes.Boolean) {
               <p-triStateCheckbox [id]="field.property" [(ngModel)]="field.value" [required]="field.required || false" />
