--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -89,6 +89,11 @@ html {
   display: block !important;
 }
 
+.chooser-result {
+  line-height: 48px;
+  padding: 0 10px;
+}
+
 .updated-col-sort svg {
   margin-left: 0;
 }
