--- a/src/app/user-profile-dialog/user-profile-dialog.component.html
+++ b/src/app/user-profile-dialog/user-profile-dialog.component.html
@@ -10,7 +10,7 @@
     </div>
     <p-button (onClick)="changePassword()" label="Change Password" icon="pi pi-shield" iconPost="left" severity="help"/>
     
-    <p-checkbox [(ngModel)]="settings.forceDial" [binary]="true" label="Use speed dial instead of toolbar"/>
+    <p-checkbox [(ngModel)]="settings.forceDial" [binary]="true" [label]="getSpeedDialLabel()"/>
     
     <p-checkbox [(ngModel)]="settings.paginatorTable" [binary]="true" label="Pagination on the Things table"/>
     
