Delete from a single endpoint instead of one request per delete (to stop flooding the server on 80+ Things deleted at once). Cap the height of the Fields column in the table for massive text to scroll. Don't allow accidental extra login submissions. Fix bug where Settings weren't updating and could overwrite changes. Noted filed bug with PrimeNG on datatable Ctrl+A. Cleaned up logging

--- a/src/app/datatable/datatable.component.css
+++ b/src/app/datatable/datatable.component.css
@@ -72,6 +72,12 @@
   width: calc(100% - var(--updated-col-width) - var(--name-col-width) - var(--time-col-width) - var(--type-col-width));
 }
 
+.fields-scroller {
+  max-height: 150px;
+  overflow: auto;
+  
+}
+
 .no-things-wrap {
   font-size: 24px;
   text-align: center;
