Most of the 'Try a Demo' feature added. Just need some realistic test data to showcase the app, and an initial information dialog. But otherwise auto-creating temporary users, etc. is done

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,7 @@
+a:hover {
+  filter: brightness(1.2);
+}
+
 .login-wrap {
   margin-top: 25vh;
   padding: 40px 20px 20px 20px;
@@ -41,6 +45,17 @@
 
 .field-wrap input {
   width: 100%;
+}
+
+.highlight-demo {
+  animation: pulseText 1s 4;
+}
+
+@keyframes pulseText {
+  50% {
+     text-shadow: 0 0 10px white;
+     text-decoration: none;
+  }
 }
 
 .terminal-image-wrap {
