--- a/src/app/user-profile-dialog/user-profile-dialog.component.html
+++ b/src/app/user-profile-dialog/user-profile-dialog.component.html
@@ -1,14 +1,16 @@
 <p-dialog header="User Profile" [(visible)]="isShowing" [modal]="true" [maximizable]="true" class="user-profile-dialog">
 
   <div class="dialog-items">
-    <span class="inline">Username: <b>{{authService.getAuth().username}}</b></span>
-    <div class="password-pad">
-      <input pInputText [(ngModel)]="currentPassword" placeholder="Current Password" class="inline" (keyup.enter)="changePassword()"
-             type="password" autocomplete="current-password" autocorrect="off" autocapitalize="off"/>
-      <span class="hide-on-mobile">New: </span><input pInputText [(ngModel)]="newPassword" placeholder="New Password" class="inline" (keyup.enter)="changePassword()"
-                  type="password" autocomplete="new-password" autocorrect="off" autocapitalize="off"/>
-    </div>
-    <p-button (onClick)="changePassword()" label="Change Password" icon="pi pi-shield" iconPost="left" severity="help"/>
+    <span class="inline">Username: <b>{{getFriendlyUsername()}}</b></span>
+    @if (!authService.getAuth().isDemoAccount) {
+      <div class="password-pad">
+        <input pInputText [(ngModel)]="currentPassword" placeholder="Current Password" class="inline" (keyup.enter)="changePassword()"
+              type="password" autocomplete="current-password" autocorrect="off" autocapitalize="off"/>
+        <span class="hide-on-mobile">New: </span><input pInputText [(ngModel)]="newPassword" placeholder="New Password" class="inline" (keyup.enter)="changePassword()"
+                    type="password" autocomplete="new-password" autocorrect="off" autocapitalize="off"/>
+      </div>
+      <p-button (onClick)="changePassword()" label="Change Password" icon="pi pi-shield" iconPost="left" severity="help"/>
+    }
     
     <p-checkbox [(ngModel)]="settings.forceDial" [binary]="true" [label]="getSpeedDialLabel()"/>
     
@@ -39,7 +41,7 @@
   </div>
   
   <ng-template pTemplate="footer">
-    <p-button (onClick)="storageService.performLogout()" label="Logout" icon="pi pi-lock-open" iconPos="left" severity="danger" class="fleft"/>
+    <p-button (onClick)="storageService.performLogout()" [label]="getFriendlyLogoutLabel()" icon="pi pi-lock-open" iconPos="left" severity="danger" class="fleft"/>
     
     <p-button (onClick)="hide()" label="Cancel" icon="pi pi-times" iconPos="left" severity="secondary"/>
     <p-button (onClick)="submit()" label="Save Profile" icon="pi pi-check" iconPos="left"/>
