Super minor demo info dialog change

--- a/src/app/demo-info-dialog/demo-info-dialog.component.html
+++ b/src/app/demo-info-dialog/demo-info-dialog.component.html
@@ -1,4 +1,4 @@
-<p-dialog header="Welcome to your Demo!" [(visible)]="isShowing" [closable]="false" [modal]="true" [maximizable]="true">
+<p-dialog #demoInfoDialog header="Welcome to your Demo!" [(visible)]="isShowing" [closable]="false" [modal]="true">
   
   <div class="paragraph">
     <i class="pi pi-thumbs-up"></i>&nbsp;Thanks for your interest in my project <b>Remember It Wholesale</b>.<br/>
