Clean up a couple of fields for saving. Also centralize cleaning up a demo account

--- a/src/app/manage-template-dialog/manage-template-dialog.component.html
+++ b/src/app/manage-template-dialog/manage-template-dialog.component.html
@@ -103,7 +103,7 @@
                     <p-chips [(ngModel)]="field.options" [allowDuplicate]="false" [addOnBlur]="true"/>
                     <label>List of Options</label>
                   </span>
-                  &nbsp;<span class="subtext">Type in a unique option and press Enter to add to the list</span>
+                  &nbsp;<span class="subtext">Type in a unique option and press Enter to add to the list, or Backspace to remove an item</span>
                 </td>
               </tr>
             }
